# husy

./: .gitignore  Cargo.toml
.github/workflows/: app-test.yml  husy-coin-test.yml  husy-test.yml
app/: .env  Cargo.toml  bootstrap.js  package.json  webpack.config.js
app/js/: bundlr.js  near.js
app/src/: app.rs  lib.rs
app/src/core/di/: config.rs  config_di.rs  get.rs  mod.rs  wallet_di.rs
app/src/data/: mod.rs
app/src/data/config/: mod.rs
app/src/data/config/dtos/: app_config_dto.rs  mod.rs
app/src/data/config/mappers/: config_dto_mapper.rs  mod.rs
app/src/data/wallet/: mod.rs  near_wallet_repository.rs  wallet_js_api.rs
app/src/data/wallet/dtos/: mod.rs  near_config_dto.rs
app/src/data/wallet/mappers/: mod.rs  near_config_dto_mappers.rs
app/src/domain/config/: app_config.rs
app/src/domain/errors/: failure.rs
app/src/presentation/: mod.rs
app/src/presentation/pages/: mod.rs
app/src/presentation/pages/home/: home_page.rs
app/src/presentation/pages/subpage/: mod.rs
app/src/presentation/routing/: main_router.rs
app/src/use_cases/wallet/: initialize_wallet_use_case.rs  mod.rs
app/src/use_cases/wallet/ports/: wallet_repository.rs
app/static/: index.html
app/tests/: placeholder.rs
contracts/husy/: Cargo.toml
contracts/husy-coin/: Cargo.toml
contracts/husy/src/: contract.rs  contract_interface.rs  ext_contracts.rs  ext_self_contracts.rs  init.rs  interface.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs  utils.rs
contracts/husy/src/implementation/: approval.rs  init.rs  (+7 more)
contracts/meme/: Cargo.toml
contracts/posts/: Cargo.toml
(+16 files in other folders)
