[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.10"
log = "0.4.17"
stdweb = "0.4"
serde = "1.0"
wasm-bindgen = "0.2"
yew = "0.19"
wasm-logger = "0.2.0"
yew-router = "0.16.0"
